--- a/src/index.css
+++ b/src/index.css
@@ -61,5 +61,5 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 nav {
-  height: 6vh;
+  height: 4vh;
 }
